--- a/src/main/webapp/WEB-INF/template/app.xhtml
+++ b/src/main/webapp/WEB-INF/template/app.xhtml
@@ -13,25 +13,30 @@
             <meta name="description" content="" />
             <meta name="author" content="" />
 
-			<!-- CSS -->
-			<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,400" />
-			<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Sans" />
-			<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lobster" />
+			<ui:remove>
+				<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,400" />
+				<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Sans" />
+				<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lobster" />
+			</ui:remove>
 			<link rel="stylesheet" href="#{facesContext.externalContext.requestContextPath}/assets/bootstrap/css/bootstrap.min.css" />
 			<link rel="stylesheet" href="#{facesContext.externalContext.requestContextPath}/assets/prettyPhoto/css/prettyPhoto.css" />
 			<link rel="stylesheet" href="#{facesContext.externalContext.requestContextPath}/assets/css/flexslider.css" />
 			<link rel="stylesheet" href="#{facesContext.externalContext.requestContextPath}/assets/css/font-awesome.css" />
 			<link rel="stylesheet" href="#{facesContext.externalContext.requestContextPath}/assets/css/style.css" />
 
-			<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-			<!--[if lt IE 9]>
-				<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-			<![endif]-->
+			<ui:remove>
+				<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+				<!--[if lt IE 9]>
+					<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+				<![endif]-->
+			</ui:remove>
 
-			<!-- Favicon and touch icons -->
-			<link rel="shortcut icon" href="#{facesContext.externalContext.requestContextPath}/assets/ico/favicon.ico" />
+			<h:outputText value="&lt;!--[if lte IE 7]&gt;&lt;script src=&quot;http://html5shim.googlecode.com/svn/trunk/html5.js&quot; /&gt;&lt;![endif]--&gt;"
+						  escape="false" />
 
 			<ui:remove>
+				<!-- Favicon and touch icons -->
+				<link rel="shortcut icon" href="#{facesContext.externalContext.requestContextPath}/assets/ico/favicon.ico" />
 				<link rel="apple-touch-icon-precomposed" sizes="144x144" href="#{facesContext.externalContext.requestContextPath}/assets/ico/apple-touch-icon-144-precomposed.png" />
 				<link rel="apple-touch-icon-precomposed" sizes="114x114" href="#{facesContext.externalContext.requestContextPath}/assets/ico/apple-touch-icon-114-precomposed.png" />
 				<link rel="apple-touch-icon-precomposed" sizes="72x72" href="#{facesContext.externalContext.requestContextPath}/assets/ico/apple-touch-icon-72-precomposed.png" />
@@ -53,11 +58,10 @@
 			</style>
         </h:head>
         <h:body>
-			<div style="padding: 12px 0px 12px 40px;">
-				<h:form id="menu">
+			<h:form id="menu">
+				<div style="padding: 12px 0px 32px 48px;">
 					<div class="controls">
 						<ui:insert name="menubar" />
-
 						<div class="control" style="padding-bottom: 24px; padding-right: 24px; float: right;">
 							<p:commandButton id="profile" icon="ui-icon ui-icon-person" value="Peerapat A"
 											 styleClass="btn btn-mini btn-info"
@@ -66,23 +70,25 @@
 
 							<p:commandButton id="logout" icon="ui-icon ui-icon-arrowthick-1-e"
 											 styleClass="btn btn-mini btn-danger"
-											 action="#{authenManaged.logout}"/>
+											 action="#{signinManaged.logout}"/>
 						</div>
 					</div>
-				</h:form>
-			</div>
-
-			<div style="padding-top: 12px; padding-bottom: 12px;">
-				<div class="slider" style="padding-bottom: 12px;">
-					<ui:insert name="content" />
 				</div>
-			</div>
+
+				<div style="padding-top: 12px; padding-bottom: 12px;">
+					<div class="slider" style="padding-bottom: 12px;">
+						<ui:insert name="content" />
+					</div>
+				</div>
+			</h:form>
+
+			<iframe id="emptyframe" src="#{facesContext.externalContext.requestContextPath}/empty.html" width="0px" height="0px" frameborder="0" />
 
 			<footer>
 				<div class="container">
 					<div class="row">
 						<div class="widget span8">
-							<h4>About Bgile</h4>
+							<h4>About Bgile BETA</h4>
 							<p>Bgile ไม่ใช่ Agile</p>
 						</div>
 						<div class="widget span3">
@@ -105,16 +111,24 @@
 					</div>
 				</div>
 			</footer>
+			<script type="text/javascript">
+				window.setInterval("reloadIFrame();", 240000);
+				function reloadIFrame() {
+					document.frames["emptyframe"].location.reload();
+				}
+			</script>
 
-			<script src="#{facesContext.externalContext.requestContextPath}/assets/bootstrap/js/bootstrap.min.js"></script>
-			<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.flexslider.js"></script>
-			<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.tweet.js"></script>
-			<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jflickrfeed.js"></script>
-			<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-			<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.ui.map.min.js"></script>
-			<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.quicksand.js"></script>
-			<script src="#{facesContext.externalContext.requestContextPath}/assets/prettyPhoto/js/jquery.prettyPhoto.js"></script>
-			<script src="#{facesContext.externalContext.requestContextPath}/assets/js/scripts.js"></script>
+			<ui:remove>
+				<script src="#{facesContext.externalContext.requestContextPath}/assets/bootstrap/js/bootstrap.min.js"></script>
+				<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.flexslider.js"></script>
+				<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.tweet.js"></script>
+				<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jflickrfeed.js"></script>
+				<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+				<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.ui.map.min.js"></script>
+				<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.quicksand.js"></script>
+				<script src="#{facesContext.externalContext.requestContextPath}/assets/prettyPhoto/js/jquery.prettyPhoto.js"></script>
+				<script src="#{facesContext.externalContext.requestContextPath}/assets/js/scripts.js"></script>
+			</ui:remove>
         </h:body>
     </f:view>
 </html>
