--- a/src/main/webapp/WEB-INF/template/base.xhtml
+++ b/src/main/webapp/WEB-INF/template/base.xhtml
@@ -12,20 +12,26 @@
             <meta name="description" content="" />
             <meta name="author" content="" />
 
-			<!-- CSS -->
-			<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,400" />
-			<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Sans" />
-			<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lobster" />
+			<ui:remove>
+				<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,400" />
+				<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Sans" />
+				<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lobster" />
+			</ui:remove>
 			<link rel="stylesheet" href="#{facesContext.externalContext.requestContextPath}/assets/bootstrap/css/bootstrap.min.css" />
 			<link rel="stylesheet" href="#{facesContext.externalContext.requestContextPath}/assets/prettyPhoto/css/prettyPhoto.css" />
 			<link rel="stylesheet" href="#{facesContext.externalContext.requestContextPath}/assets/css/flexslider.css" />
 			<link rel="stylesheet" href="#{facesContext.externalContext.requestContextPath}/assets/css/font-awesome.css" />
 			<link rel="stylesheet" href="#{facesContext.externalContext.requestContextPath}/assets/css/style.css" />
 
-			<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-			<!--[if lt IE 9]>
-				<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-			<![endif]-->
+			<ui:remove>
+				<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+				<!--[if lt IE 9]>
+					<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+				<![endif]-->
+			</ui:remove>
+
+			<h:outputText value="&lt;!--[if lte IE 7]&gt;&lt;script src=&quot;http://html5shim.googlecode.com/svn/trunk/html5.js&quot; /&gt;&lt;![endif]--&gt;"
+						  escape="false" />
 
 			<ui:remove>
 				<!-- Favicon and touch icons -->
@@ -39,7 +45,7 @@
 
         <h:body>
 			<!-- Header -->
-			<div class="container">
+			<div class="container" style="padding-bottom: 12px">
 				<div class="header row">
 					<div class="span12">
 						<div class="navbar">
@@ -52,17 +58,21 @@
 								</a>
 								<div class="nav-collapse collapse">
 									<ul class="nav pull-right">
-										<li class="current-page">
-											<a href="home.xhtml"><i class="icon-home"></i><br />Home</a>
+										<li class="#{homeManaged.currentHome}">
+											<h:link outcome="home.xhtml" >
+												<i class="icon-home"></i><br />Home</h:link>
 										</li>
-										<li>
-											<a href="board.xhtml"><i class="icon-user"></i><br />Board</a>
+										<li class="#{homeManaged.currentProjects}">
+											<h:link outcome="dashboard.xhtml" rendered="#{homeManaged.hasSession}">
+												<i class="icon-user"></i><br />Board</h:link>
 										</li>
-										<li>
-											<a href="signin.xhtml"><i class="icon-user"></i><br />Signin</a>
+										<li class="#{homeManaged.currentSignin}">
+											<h:link outcome="signin.xhtml" >
+												<i class="icon-user"></i><br />Signin</h:link>
 										</li>
-										<li>
-											<a href="contact.html"><i class="icon-envelope-alt"></i><br />Contact</a>
+										<li class="#{homeManaged.currentContact}">
+											<h:link outcome="contact.xhtml">
+												<i class="icon-envelope-alt"></i><br />Contact</h:link>
 										</li>
 									</ul>
 								</div>
@@ -72,17 +82,15 @@
 				</div>
 			</div>
 
-			<div style="padding-top: 12px; padding-bottom: 12px;">
-				<div class="slider" style="padding-top: 24px; padding-bottom: 24px;">
-					<ui:insert name="content" />
-				</div>
-			</div>
+			<h:form id="main">
+				<ui:insert name="content" />
+			</h:form>
 
 			<footer>
 				<div class="container">
 					<div class="row">
 						<div class="widget span8">
-							<h4>About Bgile</h4>
+							<h4>About Bgile BETA</h4>
 							<p>Bgile ไม่ใช่ Agile</p>
 						</div>
 						<div class="widget span3">
@@ -105,16 +113,17 @@
 					</div>
 				</div>
 			</footer>
-
-			<script src="#{facesContext.externalContext.requestContextPath}/assets/bootstrap/js/bootstrap.min.js"></script>
-			<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.flexslider.js"></script>
-			<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.tweet.js"></script>
-			<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jflickrfeed.js"></script>
-			<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-			<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.ui.map.min.js"></script>
-			<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.quicksand.js"></script>
-			<script src="#{facesContext.externalContext.requestContextPath}/assets/prettyPhoto/js/jquery.prettyPhoto.js"></script>
-			<script src="#{facesContext.externalContext.requestContextPath}/assets/js/scripts.js"></script>
+			<ui:remove>
+				<script src="#{facesContext.externalContext.requestContextPath}/assets/bootstrap/js/bootstrap.min.js"></script>
+				<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.flexslider.js"></script>
+				<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.tweet.js"></script>
+				<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jflickrfeed.js"></script>
+				<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+				<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.ui.map.min.js"></script>
+				<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.quicksand.js"></script>
+				<script src="#{facesContext.externalContext.requestContextPath}/assets/prettyPhoto/js/jquery.prettyPhoto.js"></script>
+				<script src="#{facesContext.externalContext.requestContextPath}/assets/js/scripts.js"></script>
+			</ui:remove>
         </h:body>
     </f:view>
 </html>
