--- a/src/main/webapp/WEB-INF/template/app.xhtml
+++ b/src/main/webapp/WEB-INF/template/app.xhtml
@@ -7,41 +7,8 @@
       xmlns:ui="http://java.sun.com/jsf/facelets">
     <f:view contentType="text/html">
         <h:head>
-            <meta charset="utf-8" />
-            <title>Bgile</title>
-            <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-            <meta name="description" content="" />
-            <meta name="author" content="" />
+            <ui:include src="/WEB-INF/include/header.xhtml" />
 
-			<ui:remove>
-				<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,400" />
-				<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Sans" />
-				<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lobster" />
-			</ui:remove>
-			<link rel="stylesheet" href="#{facesContext.externalContext.requestContextPath}/assets/bootstrap/css/bootstrap.min.css" />
-			<link rel="stylesheet" href="#{facesContext.externalContext.requestContextPath}/assets/prettyPhoto/css/prettyPhoto.css" />
-			<link rel="stylesheet" href="#{facesContext.externalContext.requestContextPath}/assets/css/flexslider.css" />
-			<link rel="stylesheet" href="#{facesContext.externalContext.requestContextPath}/assets/css/font-awesome.css" />
-			<link rel="stylesheet" href="#{facesContext.externalContext.requestContextPath}/assets/css/style.css" />
-
-			<ui:remove>
-				<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-				<!--[if lt IE 9]>
-					<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-				<![endif]-->
-			</ui:remove>
-
-			<h:outputText value="&lt;!--[if lte IE 7]&gt;&lt;script src=&quot;http://html5shim.googlecode.com/svn/trunk/html5.js&quot; /&gt;&lt;![endif]--&gt;"
-						  escape="false" />
-
-			<ui:remove>
-				<!-- Favicon and touch icons -->
-				<link rel="shortcut icon" href="#{facesContext.externalContext.requestContextPath}/assets/ico/favicon.ico" />
-				<link rel="apple-touch-icon-precomposed" sizes="144x144" href="#{facesContext.externalContext.requestContextPath}/assets/ico/apple-touch-icon-144-precomposed.png" />
-				<link rel="apple-touch-icon-precomposed" sizes="114x114" href="#{facesContext.externalContext.requestContextPath}/assets/ico/apple-touch-icon-114-precomposed.png" />
-				<link rel="apple-touch-icon-precomposed" sizes="72x72" href="#{facesContext.externalContext.requestContextPath}/assets/ico/apple-touch-icon-72-precomposed.png" />
-				<link rel="apple-touch-icon-precomposed" href="#{facesContext.externalContext.requestContextPath}/assets/ico/apple-touch-icon-57-precomposed.png" />
-			</ui:remove>
 			<style type="text/css">
 				.ui-panel, div.ui-state-hover {
 					margin-bottom: 10px;
@@ -58,7 +25,7 @@
 			</style>
         </h:head>
         <h:body>
-			<h:form id="menu">
+			<h:form id="form">
 				<div style="padding: 12px 0px 32px 48px;">
 					<div class="controls">
 						<ui:insert name="menubar" />
@@ -76,59 +43,15 @@
 				</div>
 
 				<div style="padding-top: 12px; padding-bottom: 12px;">
-					<div class="slider" style="padding-bottom: 12px;">
+					<div style="padding-bottom: 12px; height: 320px;">
 						<ui:insert name="content" />
 					</div>
 				</div>
+
+				<p:poll interval="40" listener="#{retainSessionManaged.poll}" />
 			</h:form>
 
-			<iframe id="emptyframe" src="#{facesContext.externalContext.requestContextPath}/empty.html" width="0px" height="0px" frameborder="0" />
-
-			<footer>
-				<div class="container">
-					<div class="row">
-						<div class="widget span8">
-							<h4>About Bgile BETA</h4>
-							<p>Bgile ไม่ใช่ Agile</p>
-						</div>
-						<div class="widget span3">
-							<h4>Contact Us</h4>
-							<p><i class="icon-map-marker"></i> Address: Bangkok Thailand</p>
-							<p><i class="icon-envelope-alt"></i> Email: <a href="">nuboat@gmail.com</a></p>
-						</div>
-					</div>
-					<div class="footer-border"></div>
-					<div class="row">
-						<div class="copyright span4">
-							<p>Copyright 2013 Bgile - All rights reserved. Template by <a href="http://azmind.com">Azmind</a>.</p>
-						</div>
-						<div class="social span8">
-							<a class="facebook" href=""></a>
-							<a class="dribbble" href=""></a>
-							<a class="twitter" href=""></a>
-							<a class="pinterest" href=""></a>
-						</div>
-					</div>
-				</div>
-			</footer>
-			<script type="text/javascript">
-				window.setInterval("reloadIFrame();", 240000);
-				function reloadIFrame() {
-					document.frames["emptyframe"].location.reload();
-				}
-			</script>
-
-			<ui:remove>
-				<script src="#{facesContext.externalContext.requestContextPath}/assets/bootstrap/js/bootstrap.min.js"></script>
-				<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.flexslider.js"></script>
-				<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.tweet.js"></script>
-				<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jflickrfeed.js"></script>
-				<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-				<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.ui.map.min.js"></script>
-				<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.quicksand.js"></script>
-				<script src="#{facesContext.externalContext.requestContextPath}/assets/prettyPhoto/js/jquery.prettyPhoto.js"></script>
-				<script src="#{facesContext.externalContext.requestContextPath}/assets/js/scripts.js"></script>
-			</ui:remove>
+			<ui:include src="/WEB-INF/include/footer.xhtml" />
         </h:body>
     </f:view>
 </html>
