--- a/src/main/webapp/WEB-INF/template/base.xhtml
+++ b/src/main/webapp/WEB-INF/template/base.xhtml
@@ -53,7 +53,7 @@
 										</li>
 										<li class="#{homeManaged.currentProjects}">
 											<h:outputLink value="dashboard" rendered="#{homeManaged.hasSession}">
-												<i class="icon-user"></i><br />Dashboard</h:outputLink>
+												<i class="icon-tasks"></i><br />Dashboard</h:outputLink>
 										</li>
 										<li class="#{homeManaged.currentSignin}">
 											<h:outputLink value="signin" rendered="#{!homeManaged.hasSession}">
