--- a/src/main/webapp/WEB-INF/include/header.xhtml
+++ b/src/main/webapp/WEB-INF/include/header.xhtml
@@ -16,6 +16,26 @@
 	<h:outputText value="&lt;!--[if lte IE 7]&gt;&lt;script src=&quot;http://html5shim.googlecode.com/svn/trunk/html5.js&quot; /&gt;&lt;![endif]--&gt;"
 				  escape="false" />
 
+	<style type="text/css">
+		.ui-corner-all {
+			-moz-border-radius: 0px;
+			-webkit-border-radius: 0px;
+			border-radius: 0px;
+		}
+		.input-append input, .input-prepend input, .input-append select, .input-prepend select, .input-append .uneditable-input, .input-prepend .uneditable-input {
+			-webkit-border-radius: 0 0px 0px 0;
+			-moz-border-radius: 0 0px 0px 0;
+			border-radius: 0 0px 0px 0;
+			height: 24px;
+		}
+
+		.input-prepend .add-on:first-child, .input-prepend .btn:first-child {
+			-webkit-border-radius: 0px 0 0 0px;
+			-moz-border-radius: 0px 0 0 0px;
+			border-radius: 0px 0 0 0px;
+			height: 24px;
+		}
+	</style>
 	<ui:remove>
 		<link rel="stylesheet" href="#{facesContext.externalContext.requestContextPath}/assets/prettyPhoto/css/prettyPhoto.css" />
 		<link rel="stylesheet" href="#{facesContext.externalContext.requestContextPath}/assets/css/flexslider.css" />
