Refactory  Userstory -> Card

--- a/src/main/webapp/WEB-INF/template/app.xhtml
+++ b/src/main/webapp/WEB-INF/template/app.xhtml
@@ -10,7 +10,7 @@
 			<ui:include src="/WEB-INF/include/header.xhtml" />
         </h:head>
 
-        <h:body>
+        <h:body style="background-color: whitesmoke;">
 			<h:form id="form">
 				<div style="padding: 12px 0px 32px 20px;">
 					<div class="controls">
