--- a/src/main/webapp/WEB-INF/include/footer.xhtml
+++ b/src/main/webapp/WEB-INF/include/footer.xhtml
@@ -7,25 +7,27 @@
 		<div class="container">
 			<div class="row">
 				<div class="widget span8">
-					<h4>About Bgile BETA</h4>
-					<p>Bgile ไม่ใช่ Agile</p>
+					<h4>About Bgileboard</h4>
+					<p>Bgile not Agile, It's just a board.</p>
 				</div>
 				<div class="widget span3">
 					<h4>Contact Us</h4>
 					<p><i class="icon-map-marker"></i> Address: Bangkok Thailand</p>
-					<p><i class="icon-envelope-alt"></i> Email: <a href="">nuboat@gmail.com</a></p>
+					<p><i class="icon-envelope-alt"></i> Email: <a href="mailto:nuboat@gmail.com">nuboat@gmail.com</a></p>
 				</div>
 			</div>
 			<div class="footer-border"></div>
 			<div class="row">
 				<div class="copyright span4">
-					<p>Copyright 2013 Bgile - All rights reserved. Template by <a href="http://azmind.com">Azmind</a>.</p>
+					<p>Copyright 2013 Bgileboard - All rights reserved. Template by <a href="http://azmind.com">Azmind</a>.</p>
 				</div>
 				<div class="social span8">
-					<a class="facebook" href=""></a>
-					<a class="dribbble" href=""></a>
-					<a class="twitter" href=""></a>
-					<a class="pinterest" href=""></a>
+					<ui:remove>
+						<a class="pinterest" href=""></a>
+						<a class="dribbble" href=""></a>
+					</ui:remove>
+					<a class="facebook" href="https://facebook.com/bgileboard"></a>
+					<a class="twitter"  href="https://twitter.com/bgileboard"></a>
 				</div>
 			</div>
 		</div>
