Commit Grant Permission & Format style of code

--- a/src/main/webapp/WEB-INF/include/footer.xhtml
+++ b/src/main/webapp/WEB-INF/include/footer.xhtml
@@ -18,16 +18,16 @@
 			</div>
 			<div class="footer-border"></div>
 			<div class="row">
-				<div class="copyright span4">
+				<div class="copyright span6">
 					<p>Copyright 2013 Bgileboard - All rights reserved. Template by <a href="http://azmind.com">Azmind</a>.</p>
 				</div>
-				<div class="social span8">
+				<div class="social span6">
 					<ui:remove>
 						<a class="pinterest" href=""></a>
 						<a class="dribbble" href=""></a>
 					</ui:remove>
-					<a class="facebook" href="https://facebook.com/bgileboard"></a>
-					<a class="twitter"  href="https://twitter.com/bgileboard"></a>
+					<a class="facebook" href="https://facebook.com/bgileboard" target="_blank"></a>
+					<a class="twitter"  href="https://twitter.com/bgileboard" target="_blank"></a>
 				</div>
 			</div>
 		</div>
