--- a/src/main/webapp/WEB-INF/template/base.xhtml
+++ b/src/main/webapp/WEB-INF/template/base.xhtml
@@ -2,7 +2,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
-	  xmlns:p="http://primefaces.org/ui"
       xmlns:f ="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets">
     <f:view contentType="text/html">
@@ -11,47 +10,46 @@
         </h:head>
 
         <h:body>
-			<!-- Header -->
-			<div class="container" style="padding-bottom: 12px">
-				<div class="header row">
-					<div class="span12">
-						<div class="navbar">
-							<div class="navbar-inner">
-								<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-								</a>
-								<div class="nav-collapse collapse">
-									<ul class="nav pull-right">
-										<li class="#{homeManaged.currentHome}">
-											<h:outputLink value="home" >
-												<i class="icon-home"></i><br />Home</h:outputLink>
-										</li>
-										<li class="#{homeManaged.currentProjects}">
-											<h:outputLink value="dashboard" rendered="#{homeManaged.hasSession}">
-												<i class="icon-tasks"></i><br />Dashboard</h:outputLink>
-										</li>
-										<li class="#{homeManaged.currentSignin}">
-											<h:outputLink value="signin" rendered="#{!homeManaged.hasSession}">
-												<i class="icon-user"></i><br />Signin</h:outputLink>
-										</li>
-										<li class="#{homeManaged.currentContact}">
-											<h:outputLink value="contact">
-												<i class="icon-envelope-alt"></i><br />Contact</h:outputLink>
-										</li>
-									</ul>
+			<h:form id="form">
+				<!-- Header -->
+				<div class="container" style="padding-bottom: 12px">
+					<div class="header row">
+						<div class="span12">
+							<div class="navbar">
+								<div class="navbar-inner">
+									<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+										<span class="icon-bar"></span>
+										<span class="icon-bar"></span>
+										<span class="icon-bar"></span>
+										<span class="icon-bar"></span>
+									</a>
+									<div class="nav-collapse collapse">
+										<ul class="nav pull-right">
+											<li class="#{homeManaged.getActiveClass('home')}">
+												<h:outputLink value="home" >
+													<i class="icon-home"></i><br />Home</h:outputLink>
+											</li>
+											<li class="#{homeManaged.getActiveClass('dashboard')}">
+												<h:outputLink value="dashboard" rendered="#{homeManaged.hasSession}">
+													<i class="icon-tasks"></i><br />Dashboard</h:outputLink>
+											</li>
+											<li class="#{homeManaged.getActiveClass('signin')}">
+												<h:outputLink value="signin" rendered="#{!homeManaged.hasSession}">
+													<i class="icon-user"></i><br />Signin</h:outputLink>
+											</li>
+											<li class="#{homeManaged.getActiveClass('register')}">
+												<h:outputLink value="register">
+													<i class="icon-envelope-alt"></i><br />Register</h:outputLink>
+											</li>
+										</ul>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
 
-			<h:form id="form">
 				<ui:insert name="content" />
-				<p:poll interval="240" listener="#{retainSessionManaged.poll}" />
 			</h:form>
 
 			<ui:include src="/WEB-INF/include/footer.xhtml" />
