--- a/src/main/webapp/WEB-INF/include/header.xhtml
+++ b/src/main/webapp/WEB-INF/include/header.xhtml
@@ -32,6 +32,29 @@
 			height: 24px;
 		}
 	</style>
+	<script>
+		function handleAjax(xhr, status, args) {
+			if (xhr.getElementsByTagName('error-name')[0].childNodes[0].nodeValue.indexOf("ViewExpiredException") !== -1) {
+				window.location.href = '/bgile/signin';
+			}
+		}
+	</script>
+	<script>
+		(function(i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r;
+			i[r] = i[r] || function() {
+				(i[r].q = i[r].q || []).push(arguments);
+			}, i[r].l = 1 * new Date();
+			a = s.createElement(o),
+					m = s.getElementsByTagName(o)[0];
+			a.async = 1;
+			a.src = g;
+			m.parentNode.insertBefore(a, m);
+		})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+		ga('create', 'UA-44091036-1', 'bgileboard.com');
+		ga('send', 'pageview');
+	</script>
 	<ui:remove>
 		<link rel="stylesheet" href="#{facesContext.externalContext.requestContextPath}/assets/prettyPhoto/css/prettyPhoto.css" />
 		<link rel="stylesheet" href="#{facesContext.externalContext.requestContextPath}/assets/css/flexslider.css" />
