A lot of Changes. 1. Fixed Create board when order fail. 2. Validattion card before save. 3. Validattion board before save. 4. Create Test for util. 5. Removed unused class. 6. Created example data

--- a/src/main/webapp/WEB-INF/include/header.xhtml
+++ b/src/main/webapp/WEB-INF/include/header.xhtml
@@ -31,6 +31,9 @@
 			border-radius: 0px 0 0 0px;
 			height: 24px;
 		}
+		.ui-message-fatal-icon {
+			background: #b94a48;
+		}
 	</style>
 	<script>
 		function handleAjax(xhr, status, args) {
