--- a/src/main/webapp/WEB-INF/template/app.xhtml
+++ b/src/main/webapp/WEB-INF/template/app.xhtml
@@ -28,8 +28,8 @@
 					</div>
 				</div>
 
-				<div class="container-fluid">
-					<div class="row-fluid">
+				<div class="container">
+					<div class="row">
 						<div style="padding-top: 12px; padding-bottom: 12px;">
 							<div style="padding-bottom: 12px; height: 320px;">
 								<ui:insert name="content" />
