--- a/src/main/webapp/WEB-INF/include/footer.xhtml
+++ b/src/main/webapp/WEB-INF/include/footer.xhtml
@@ -7,21 +7,26 @@
 		<div class="container">
 			<div class="row">
 				<div class="widget span8">
-					<h4>About Bgileboard</h4>
-					<p>Bgile not Agile, It's just a board.</p>
+					<h4>ABOUT BGILEBOARD (BETA)</h4>
+					<p>Opensource Kanban board</p>
 				</div>
 				<div class="widget span3">
 					<h4>Contact Us</h4>
 					<p><i class="icon-map-marker"></i> Address: Bangkok Thailand</p>
-					<p><i class="icon-envelope-alt"></i> Email: <a href="mailto:nuboat@gmail.com">nuboat@gmail.com</a></p>
+					<p><i class="icon-envelope-alt"></i> Email: <a href="mailto:nb@bgileboard.com">@nuboat</a></p>
 				</div>
 			</div>
 			<div class="footer-border"></div>
 			<div class="row">
-				<div class="copyright span6">
-					<p>Copyright 2013 Bgileboard - All rights reserved. Template by <a href="http://azmind.com">Azmind</a>.</p>
+				<div class="copyright span8">
+					<p>
+						© Copyright 2013 Bgileboard Inc. All rights reserved,
+						Sourcecode by <a href="http://github.com/nuboat/bgile">@nuboat</a>.
+						Hosting by <a href="http://th.linkedin.com/in/peerapat/">Peerapat A</a>
+						Template by <a href="http://azmind.com">Azmind</a>.
+					</p>
 				</div>
-				<div class="social span6">
+				<div class="social span4">
 					<ui:remove>
 						<a class="pinterest" href=""></a>
 						<a class="dribbble" href=""></a>
