--- a/src/main/webapp/WEB-INF/include/footer.xhtml
+++ b/src/main/webapp/WEB-INF/include/footer.xhtml
@@ -6,14 +6,18 @@
 	<footer>
 		<div class="container">
 			<div class="row">
-				<div class="widget span8">
+				<div class="widget span5">
 					<h4>ABOUT BGILEBOARD (BETA)</h4>
 					<p>Opensource Kanban board</p>
 				</div>
-				<div class="widget span3">
+				<div class="widget span4">
 					<h4>Contact Us</h4>
 					<p><i class="icon-map-marker"></i> Address: Bangkok Thailand</p>
 					<p><i class="icon-envelope-alt"></i> Email: <a href="mailto:nb@bgileboard.com">@nuboat</a></p>
+				</div>
+				<div class="widget span3">
+					<iframe src="//www.facebook.com/plugins/likebox.php?href=https://www.facebook.com/bgileboard&amp;width=292&amp;height=258&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=false&amp;header=false&amp;"
+							style="border:none; overflow:hidden; width:292px; height:258px;" ></iframe>
 				</div>
 			</div>
 			<div class="footer-border"></div>
