v. 1.1.4-beta Fixed 2 defect
1. Can't login after login fail.
2. Board permission & public board for viewer

--- a/src/main/webapp/WEB-INF/template/base.xhtml
+++ b/src/main/webapp/WEB-INF/template/base.xhtml
@@ -38,7 +38,7 @@
 													<i class="icon-user"></i><br />Signin</h:outputLink>
 											</li>
 											<li class="#{homeManaged.getActiveClass('register')}">
-												<h:outputLink value="register">
+												<h:outputLink value="register" rendered="#{!homeManaged.hasSession}">
 													<i class="icon-envelope-alt"></i><br />Register</h:outputLink>
 											</li>
 										</ul>
