Support Jetty & remove hardcode context path
still have bug, can't redirect to dashboard after login

--- a/src/main/webapp/WEB-INF/template/app.xhtml
+++ b/src/main/webapp/WEB-INF/template/app.xhtml
@@ -37,7 +37,7 @@
 							<div style="padding-bottom: 24px; padding-right: 24px; float: right;">
 								<p:commandButton id="login" icon="ui-icon ui-icon-arrowthick-1-e"
 												 value="Signin" styleClass="btn btn-mini btn-info"
-												 onclick="window.location.href = '/bgile/signin';" />
+												 onclick="window.location.href = '#{pageContext.request.contextPath}signin';" />
 							</div>
 						</p:outputPanel>
 					</div>
