--- a/src/main/webapp/WEB-INF/include/header.xhtml
+++ b/src/main/webapp/WEB-INF/include/header.xhtml
@@ -38,7 +38,7 @@
 	<script>
 		function handleAjax(xhr, status, args) {
 			if (xhr.getElementsByTagName('error-name')[0].childNodes[0].nodeValue.indexOf("ViewExpiredException") !== -1) {
-				window.location.href = '/bgile/signin';
+				window.location.href = '#{pageContext.request.contextPath}/signin';
 			}
 		}
 	</script>
