--- a/src/main/webapp/WEB-INF/template/app.xhtml
+++ b/src/main/webapp/WEB-INF/template/app.xhtml
@@ -17,7 +17,8 @@
 						<p:outputPanel styleClass="controls" rendered="#{!account.notSignin}">
 							<ui:insert name="menubar" />
 							<div style="padding-bottom: 24px; padding-right: 24px; float: right;">
-								<img alt="" src="#{account.gravatarUrl}" height="30px" width="30px"/>
+
+								<h:graphicImage value="#{account.gravatarUrl}" alt="G" height="30px" width="30px"/>
 
 								<span style="width: 4px;" />
 
