Refoctor Code & Burndown Chart done

--- a/src/main/webapp/WEB-INF/include/footer.xhtml
+++ b/src/main/webapp/WEB-INF/include/footer.xhtml
@@ -3,17 +3,19 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
+
 	<footer>
 		<div class="container">
 			<div class="row">
 				<div class="widget span5">
 					<h4>ABOUT BGILEBOARD (BETA)</h4>
-					<p>Opensource Kanban board</p>
+					<p>SaaS Kanban board build from <a href="http://github.com/nuboat/bgile">Bgile.</a></p>
+					<p>For beta test please email to <a href="mailto:nuboat@gmail.com">@nuboat</a> for request account.</p>
 				</div>
 				<div class="widget span4">
 					<h4>Contact Us</h4>
-					<p><i class="icon-map-marker"></i> Address: Bangkok Thailand</p>
-					<p><i class="icon-envelope-alt"></i> Email: <a href="mailto:nb@bgileboard.com">@nuboat</a></p>
+					<p><i class="icon-map-marker"></i> Address: Bangkok, Thailand</p>
+					<p><i class="icon-envelope-alt"></i> Email: <a href="mailto:nuboat@gmail.com">@nuboat</a></p>
 				</div>
 				<div class="widget span3">
 					<iframe src="//www.facebook.com/plugins/likebox.php?href=https://www.facebook.com/bgileboard&amp;width=292&amp;height=258&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=false&amp;header=false&amp;"
@@ -24,32 +26,17 @@
 			<div class="row">
 				<div class="copyright span8">
 					<p>
-						© Copyright 2013 Bgileboard Inc. All rights reserved,
+						© Copyright 2013 bgileboard.com, All Rights Reserved,
 						Sourcecode by <a href="http://github.com/nuboat/bgile">@nuboat</a>.
 						Hosting by <a href="http://th.linkedin.com/in/peerapat/">Peerapat A</a>
 						Template by <a href="http://azmind.com">Azmind</a>.
 					</p>
 				</div>
 				<div class="social span4">
-					<ui:remove>
-						<a class="pinterest" href=""></a>
-						<a class="dribbble" href=""></a>
-					</ui:remove>
 					<a class="facebook" href="https://facebook.com/bgileboard" target="_blank"></a>
 					<a class="twitter"  href="https://twitter.com/bgileboard" target="_blank"></a>
 				</div>
 			</div>
 		</div>
 	</footer>
-	<ui:remove>
-		<script src="#{facesContext.externalContext.requestContextPath}/assets/bootstrap/js/bootstrap.min.js"></script>
-		<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.flexslider.js"></script>
-		<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.tweet.js"></script>
-		<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jflickrfeed.js"></script>
-		<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-		<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.ui.map.min.js"></script>
-		<script src="#{facesContext.externalContext.requestContextPath}/assets/js/jquery.quicksand.js"></script>
-		<script src="#{facesContext.externalContext.requestContextPath}/assets/prettyPhoto/js/jquery.prettyPhoto.js"></script>
-		<script src="#{facesContext.externalContext.requestContextPath}/assets/js/scripts.js"></script>
-	</ui:remove>
 </ui:composition>
