--- a/src/main/webapp/WEB-INF/include/header.xhtml
+++ b/src/main/webapp/WEB-INF/include/header.xhtml
@@ -1,8 +1,9 @@
 <ui:composition
 	xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+
 	<meta charset="utf-8" />
 	<title>Bgile</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
