--- a/src/main/webapp/WEB-INF/template/app.xhtml
+++ b/src/main/webapp/WEB-INF/template/app.xhtml
@@ -1,10 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
 	  xmlns:p="http://primefaces.org/ui"
-      xmlns:f ="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
+	  xmlns:h="http://xmlns.jcp.org/jsf/html"
+	  xmlns:f="http://xmlns.jcp.org/jsf/core"
+	  xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <f:view contentType="text/html">
         <h:head>
 			<ui:include src="/WEB-INF/include/header.xhtml" />
@@ -13,6 +12,7 @@
         <h:body style="background-color: whitesmoke;">
 			<div class="row" style="padding: 12px 0px 32px 20px;">
 				<h:form id="form">
+					<p:poll interval="60" listener="#{account.polling}" />
 					<div style="padding: 12px 0px 32px 20px;">
 						<p:outputPanel styleClass="controls" rendered="#{!account.notSignin}">
 							<ui:insert name="menubar" />
@@ -25,7 +25,7 @@
 								<p:commandButton id="profile" icon="ui-icon ui-icon-contact"
 												 value="#{account.account.firstname} #{account.account.lastname}"
 												 styleClass="btn btn-mini btn-info"
-												 action="#{profileManaged.linkToProfile(facesContext.viewRoot.viewId)}"/>
+												 action="#{profile.linkToProfile(facesContext.viewRoot.viewId)}"/>
 
 								<span style="width: 4px;" />
 
