--- a/src/main/webapp/WEB-INF/template/base.xhtml
+++ b/src/main/webapp/WEB-INF/template/base.xhtml
@@ -1,9 +1,10 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f ="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
+	  xmlns:p="http://primefaces.org/ui"
+	  xmlns:h="http://xmlns.jcp.org/jsf/html"
+	  xmlns:f="http://xmlns.jcp.org/jsf/core"
+	  xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+
     <f:view contentType="text/html">
         <h:head>
 			<ui:include src="/WEB-INF/include/header.xhtml" />
@@ -11,6 +12,7 @@
 
         <h:body>
 			<h:form id="form">
+				<p:poll interval="60" listener="#{account.polling}" />
 				<!-- Header -->
 				<div class="container" style="padding-bottom: 12px">
 					<div class="header row">
