Fixed Bug & Fixed Test & Implement EmailFacade

--- a/src/main/webapp/WEB-INF/include/footer.xhtml
+++ b/src/main/webapp/WEB-INF/include/footer.xhtml
@@ -8,27 +8,26 @@
 		<div class="container">
 			<div class="row">
 				<div class="widget span5">
-					<h4>ABOUT BGILEBOARD (BETA)</h4>
-					<p>SaaS Kanban board build from <a href="http://github.com/nuboat/bgile">Bgile.</a></p>
-					<p>For beta test please email to <a href="mailto:nuboat@gmail.com">@nuboat</a> for request account.</p>
+					<h4>BGILEBOARD BETA</h4>
+					<p>MAKE PROCESS SIMPLE</p>
+					<p>For beta test please email to <a href="mailto:b@bgileboard.com">Bgile Admin</a> for request account.</p>
 				</div>
 				<div class="widget span4">
 					<h4>Contact Us</h4>
 					<p><i class="icon-map-marker"></i> Address: Bangkok, Thailand</p>
-					<p><i class="icon-envelope-alt"></i> Email: <a href="mailto:nuboat@gmail.com">@nuboat</a></p>
+					<p><i class="icon-envelope-alt"></i> Email: <a href="mailto:nb@bgileboard.com">Team</a></p>
 				</div>
 				<div class="widget span3">
 					<iframe src="//www.facebook.com/plugins/likebox.php?href=https://www.facebook.com/bgileboard&amp;width=292&amp;height=258&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=false&amp;header=false&amp;"
 							style="border:none; overflow:hidden; width:292px; height:258px;" ></iframe>
 				</div>
 			</div>
-			<div class="footer-border"></div>
+			<div class="footer-border" style="margin-top: 0px;"></div>
 			<div class="row">
 				<div class="copyright span8">
 					<p>
-						© Copyright 2013 bgileboard.com, All Rights Reserved,
-						Sourcecode by <a href="http://github.com/nuboat/bgile">@nuboat</a>.
-						Hosting by <a href="http://th.linkedin.com/in/peerapat/">Peerapat A</a>
+						© Copyright 2013-2014 bgileboard.com, All Rights Reserved,
+						Power by <a href="http://github.com/nuboat/bgile">Bgile</a>.
 						Template by <a href="http://azmind.com">Azmind</a>.
 					</p>
 				</div>
