Refacetor & Changed cursor of card header to "move"

--- a/src/main/webapp/WEB-INF/template/app.xhtml
+++ b/src/main/webapp/WEB-INF/template/app.xhtml
@@ -31,7 +31,7 @@
 
 								<p:commandButton id="logout" icon="ui-icon ui-icon-arrowthick-1-e"
 												 styleClass="btn btn-mini btn-danger"
-												 action="#{signinManaged.logout}" />
+												 action="#{signin.logout}" />
 							</div>
 						</p:outputPanel>
 						<p:outputPanel styleClass="controls" rendered="#{account.notSignin}">
